Updated Cluster Configuration
removed core-site.xml's
added hadoop-env.sh
updated hbase-env.sh